# class-transcriber

./: .env.example  .gitignore  INICIAR.bat  INSTALAR.bat  LEEME.txt  README.md  main.py  pyproject.toml  render.yaml
app/: config.py  database.py  main.py  models.py  worker.py
app/routers/: files.py  transcriptions.py
app/services/: pdf.py  repetition.py  transcription.py
app/templates/: 404.html  base.html  detail.html  index.html  list.html
app/templates/partials/: transcription_row.html
scripts/: diagnose_transcription.py  scan_repetition.py
