[project]
name = "class-transcriber"
version = "0.1.0"
description = "Transcriptor de clases universitarias — genera PDFs a partir de audios"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "fpdf2>=2.8.7",
    "google-genai>=1.75.0",
    "jinja2>=3.1.6",
    "mutagen>=1.47.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
